--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,14 @@ a  {
   font-style: italic;
 }
 
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+
+
 /* BARRA DE PROGRESO */
 
 .barra-scroll {
